--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,9 +86,11 @@ body {
     padding: 10px;
     border-radius: 10px;
     outline: none;
+    cursor: pointer;
 }
 
 #formularioLancamento {
+    display: none;
     margin-top: 40px;
     background-color: #ffffff;
     padding: 20px;
@@ -120,6 +122,7 @@ body {
     padding: 10px 20px;
     font-size: 130%;
     border-radius: 5px;
+    cursor: pointer;
 }
 
 #areaLancamentos {
